crates/rstest-bdd-macros/tests/fixtures/scenario_missing_file.stderr
error: failed to parse feature file: Could not read path: $WORKSPACE/target/tests/trybuild/rstest-bdd-macros/tests/features/does_not_exist.feature
 --> tests/fixtures/scenario_missing_file.rs:3:1
  |
3 | #[scenario(path = "tests/features/does_not_exist.feature")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `scenario` (in Nightly builds, run with -Z macro-backtrace for more info)
