crates/rstest-bdd-macros/tests/fixtures/scenario_missing_file.rs
use rstest_bdd_macros::scenario;

#[scenario(path = "tests/features/does_not_exist.feature")]
fn missing() {}

fn main() {}
